<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbarStyle="outsideOverlay"
        tools:context=".activity.LessonEditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/content_lesson_editor_subject_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/content_lesson_editor_subject_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_lesson_editor_subject_name"
                    android:inputType="text"
                    android:maxLines="1">

                    <requestFocus />

                </AutoCompleteTextView>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/content_lesson_editor_lesson_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/content_lesson_editor_lesson_type_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_lesson_editor_lesson_type"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/content_lesson_editor_teachers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <MultiAutoCompleteTextView
                    android:id="@+id/content_lesson_editor_teachers_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_lesson_editor_teachers"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/content_lesson_editor_classrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <MultiAutoCompleteTextView
                    android:id="@+id/content_lesson_editor_classrooms_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_lesson_editor_classrooms"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/content_lesson_editor_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_lesson_editor_start_time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/content_lesson_editor_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_lesson_editor_end_time" />

            </LinearLayout>

            <Spinner
                android:id="@+id/content_lesson_editor_repeat_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/lesson_repeat_types"
                android:visibility="gone" />

            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/content_lesson_editor_by_weekday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <co.ceryle.segmentedbutton.SegmentedButtonGroup
                        android:id="@+id/content_lesson_editor_weekdays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:sbg_position="0"
                        app:sbg_radius="10dp"
                        app:sbg_selectorColor="@android:color/darker_gray"
                        app:sbg_selectorTextColor="@android:color/white"
                        app:sbg_shadow="true"
                        app:sbg_shadowElevation="2dp"
                        app:sbg_shadowMargin="4dp">

                        <co.ceryle.segmentedbutton.SegmentedButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_lesson_editor_monday" />

                        <co.ceryle.segmentedbutton.SegmentedButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_lesson_editor_tuesday" />

                        <co.ceryle.segmentedbutton.SegmentedButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_lesson_editor_wednesday" />

                        <co.ceryle.segmentedbutton.SegmentedButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_lesson_editor_thursday" />

                        <co.ceryle.segmentedbutton.SegmentedButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_lesson_editor_friday" />

                        <co.ceryle.segmentedbutton.SegmentedButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_lesson_editor_saturday" />

                        <co.ceryle.segmentedbutton.SegmentedButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_lesson_editor_sunday" />

                    </co.ceryle.segmentedbutton.SegmentedButtonGroup>

                    <ru.erdenian.studentassistant.customviews.WeeksSelector
                        android:id="@+id/content_lesson_editor_weeks_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/content_lesson_editor_by_dates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Todo: редактор дат -->

                </LinearLayout>

            </ViewFlipper>

        </LinearLayout>

    </ScrollView>

</LinearLayout>