<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="8dp"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_lesson_editor_subject_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/content_lesson_editor_subject_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_lesson_editor_subject_name"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1">

                <requestFocus/>

            </AutoCompleteTextView>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_lesson_editor_lesson_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/content_lesson_editor_lesson_type_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_lesson_editor_lesson_type"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_lesson_editor_teachers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <MultiAutoCompleteTextView
                android:id="@+id/content_lesson_editor_teachers_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_lesson_editor_teachers"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_lesson_editor_classrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <MultiAutoCompleteTextView
                android:id="@+id/content_lesson_editor_classrooms_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_lesson_editor_classrooms"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/content_lesson_editor_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_lesson_editor_start_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                tools:ignore="HardcodedText"/>

            <Button
                android:id="@+id/content_lesson_editor_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_lesson_editor_end_time"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/content_lesson_editor_repeat_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/lesson_repeat_types"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/content_lesson_editor_by_weekday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <co.ceryle.segmentedbutton.SegmentedButtonGroup
                    android:id="@+id/content_lesson_editor_weekdays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:sbg_position="0"
                    app:sbg_radius="10dp"
                    app:sbg_selectorColor="@android:color/darker_gray"
                    app:sbg_selectorTextColor="@android:color/white"
                    app:sbg_shadow="true"
                    app:sbg_shadowElevation="2dp"
                    app:sbg_shadowMargin="4dp">

                    <co.ceryle.segmentedbutton.SegmentedButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_monday"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_tuesday"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_wednesday"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_thursday"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_friday"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_saturday"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_sunday"/>

                </co.ceryle.segmentedbutton.SegmentedButtonGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_lesson_editor_weeks_variants_title"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/content_lesson_editor_weeks_variants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/weeks_variants"
                        android:padding="8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/content_lesson_editor_remove_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/minus"
                        tools:ignore="ContentDescription"/>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <LinearLayout
                            android:id="@+id/content_lesson_editor_weeks_parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"/>

                    </HorizontalScrollView>

                    <ImageButton
                        android:id="@+id/content_lesson_editor_add_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_menu_plus"
                        tools:ignore="ContentDescription"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_lesson_editor_by_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- Todo: редактор дат -->

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</ScrollView>