<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/content_semester_editor_semester_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/content_semester_editor_semester_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_semester_editor_semester_name"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:maxLines="1">

            <requestFocus/>

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/content_semester_editor_first_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_semester_editor_first_day"/>

    <Button
        android:id="@+id/content_semester_editor_last_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_semester_editor_last_day"/>

</LinearLayout>